--- a/Frontend/src/components/Sidebar/Sidebar.module.css
+++ b/Frontend/src/components/Sidebar/Sidebar.module.css
@@ -1,7 +1,7 @@
 .sidebar {
   width: 100%;
   height: 100%;
-  background-color: blue;
+  background-color: var(--sidebar-color)
 }
 
 .navButtons {
